@@ -31,6 +31,7 @@
 #include	"photom.h"
 #include	"psf.h"
 #include	"retina.h"
+#include        "astrom.h" /* PWD change here */
 
 /********************************* analyse ***********************************/
 void  analyse(picstruct *field, picstruct *dfield, int objnb,
