@@ -18,6 +18,7 @@
 
 #include	<math.h>
 #include	<stdlib.h>
+#include        <string.h>  /* PWD: change here */
 
 #include	"define.h"
 #include	"globals.h"
