@@ -17,6 +17,7 @@
 #include	<math.h>
 #include	<stdio.h>
 #include	<stdlib.h>
+#include        <string.h>   /* PWD: change here */
 
 #include	"define.h"
 #include	"globals.h"
